Update To Rebinding Page

--- a/Site/contact.html
+++ b/Site/contact.html
@@ -31,7 +31,10 @@
 
       <!-- CENTER -->
       <div class="nav-slot-center">
-        <span class="navbar-title">Cornerstone Bindery</span>
+        <span class="navbar-title">
+          <span class="brand-line-1">Cornerstone</span>
+          <span class="brand-line-2">Bindery</span>
+        </span>      
       </div>
 
       <!-- RIGHT -->
