--- a/Site/index.html
+++ b/Site/index.html
@@ -6,28 +6,26 @@
   <title>Cornerstone Bindery</title>
   <meta name="description" content="Handcrafted Bible rebinding and restoration." />
 
-  <!-- Cinzel -->
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap 5 -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Your custom CSS (create this file at /assets/site.css) -->
+  <!-- Site CSS -->
   <link rel="stylesheet" href="assets/site.css">
 </head>
 
 <body>
-
-  <!-- NAVBAR (Always hamburger) + Offcanvas menu -->
+  <!-- NAVBAR + Offcanvas -->
   <nav class="navbar bg-body-tertiary border-bottom">
     <div class="container">
-
       <!-- LEFT -->
-      <div class="nav-slot-left">
-        <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img src="gallery/logowhite.png" alt="Cornerstone Bindery Logo" class="navbar-logo">
-        </a>
-      </div>
+      <a class="navbar-brand d-flex align-items-center nav-slot-left" href="index.html">
+        <img src="gallery/logowhite.png" alt="Cornerstone Bindery logo" class="navbar-logo">
+      </a>
 
       <!-- CENTER -->
       <div class="nav-slot-center">
@@ -39,9 +37,13 @@
 
       <!-- RIGHT -->
       <div class="nav-slot-right">
-        <button class="navbar-toggler" type="button"
-                data-bs-toggle="offcanvas" data-bs-target="#siteMenu"
-                aria-controls="siteMenu" aria-label="Open menu">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#siteMenu"
+          aria-controls="siteMenu"
+          aria-label="Open menu">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
@@ -49,14 +51,14 @@
       <!-- Offcanvas menu -->
       <div class="offcanvas offcanvas-end" tabindex="-1" id="siteMenu" aria-labelledby="siteMenuLabel">
         <div class="offcanvas-header offcanvas-header-custom">
-  <h5 class="offcanvas-title offcanvas-title-lg" id="siteMenuLabel">
-    MENU
-  </h5>
-  <button type="button"
-          class="btn-close offcanvas-close"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"></button>
-</div>
+          <h2 class="offcanvas-title offcanvas-title-lg" id="siteMenuLabel">Menu</h2>
+          <button
+            type="button"
+            class="btn-close offcanvas-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
+        </div>
+
         <div class="offcanvas-body">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="rebinding.html">Rebinding Options</a></li>
@@ -69,100 +71,111 @@
           <a class="btn btn-dark w-100" href="contact.html">Request a Quote</a>
         </div>
       </div>
-
     </div>
   </nav>
 
-  <!-- HERO -->
-  <header class="py-5">
-    <div class="container">
-      <div class="row align-items-center g-4">
-        <div class="col-lg-6">
-          <h1 class="display-6 fw-semibold">Handcrafted Bible Rebinding &amp; Restoration</h1>
-          <p class="lead text-secondary mt-3">
-            Premium materials, careful craftsmanship, and designs built to last for decades.
-          </p>
-          <div class="d-flex gap-2 mt-4">
-            <a class="btn btn-dark btn-lg" href="contact.html">Request a Quote</a>
-            <a class="btn btn-outline-dark btn-lg" href="rebinding.html">See Options</a>
+  <main class="page-frame">
+    <!-- HERO -->
+    <header class="py-5">
+      <div class="container">
+        <div class="row align-items-center g-4">
+          <div class="col-lg-6">
+            <h1 class="display-6 fw-semibold">Handcrafted Bible Rebinding &amp; Restoration</h1>
+            <p class="lead text-secondary mt-3">
+              Premium materials, careful craftsmanship, and designs built to last for decades.
+            </p>
+
+            <div class="d-flex gap-2 mt-4">
+              <a class="btn btn-dark btn-lg" href="contact.html">Request a Quote</a>
+              <a class="btn btn-outline-dark btn-lg" href="rebinding.html">See Options</a>
+            </div>
+
+            <p class="text-secondary small mt-3 mb-0">Based in Georgia • Shipping available</p>
           </div>
-          <p class="text-secondary small mt-3 mb-0">Based in Georgia • Shipping available</p>
-        </div>
 
-        <div class="col-lg-6 d-flex justify-content-lg-end justify-content-center">
-          <img class="img-fluid rounded-4 shadow-sm"
-               src="gallery/bibleimage.png"
-               alt="Rebound Bible">
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- FEATURES -->
-  <section class="py-5 bg-body-tertiary">
-    <div class="container">
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="p-4 bg-white rounded-4 h-100 border">
-            <h3 class="h5 fw-semibold">Rebinding</h3>
-            <p class="text-secondary mb-0">Replace failing covers and hinges with durable materials and a clean finish.</p>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="p-4 bg-white rounded-4 h-100 border">
-            <h3 class="h5 fw-semibold">Restoration</h3>
-            <p class="text-secondary mb-0">Stabilize older volumes while preserving as much original character as possible.</p>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="p-4 bg-white rounded-4 h-100 border">
-            <h3 class="h5 fw-semibold">Custom Options</h3>
-            <p class="text-secondary mb-0">Leather choices, spine text, hubs, ribbons, edge finishing, and more.</p>
+          <div class="col-lg-6 d-flex justify-content-lg-end justify-content-center">
+            <img
+              class="img-fluid rounded-4 shadow-sm"
+              src="gallery/bibleimage.png"
+              alt="A rebound Bible">
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </header>
 
-  <!-- RECENT WORK -->
-  <section class="py-5">
-    <div class="container">
-      <div class="d-flex align-items-end justify-content-between gap-3 mb-3">
-        <div>
-          <h2 class="h3 fw-semibold mb-1">Recent Work</h2>
-          <p class="text-secondary mb-0">A few examples—more in the gallery.</p>
+    <!-- FEATURES -->
+    <section class="py-5 bg-body-tertiary">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="p-4 bg-white rounded-4 h-100 border">
+              <h3 class="h5 fw-semibold">Rebinding</h3>
+              <p class="text-secondary mb-0">
+                Replace failing covers and hinges with durable materials and a clean finish.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="p-4 bg-white rounded-4 h-100 border">
+              <h3 class="h5 fw-semibold">Restoration</h3>
+              <p class="text-secondary mb-0">
+                Stabilize older volumes while preserving as much original character as possible.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="p-4 bg-white rounded-4 h-100 border">
+              <h3 class="h5 fw-semibold">Custom Options</h3>
+              <p class="text-secondary mb-0">
+                Leather choices, spine text, hubs, ribbons, edge finishing, and more.
+              </p>
+            </div>
+          </div>
         </div>
-        <a class="btn btn-outline-dark" href="gallery.html">View Gallery</a>
       </div>
+    </section>
 
-      <div class="row g-3">
-        <div class="col-6 col-lg-3"><img class="img-fluid rounded-4 border" src="assets/work1.jpg" alt=""></div>
-        <div class="col-6 col-lg-3"><img class="img-fluid rounded-4 border" src="assets/work2.jpg" alt=""></div>
-        <div class="col-6 col-lg-3"><img class="img-fluid rounded-4 border" src="assets/work3.jpg" alt=""></div>
-        <div class="col-6 col-lg-3"><img class="img-fluid rounded-4 border" src="assets/work4.jpg" alt=""></div>
+    <!-- RECENT WORK -->
+    <section class="py-5">
+      <div class="container">
+        <div class="d-flex align-items-end justify-content-between gap-3 mb-3">
+          <div>
+            <h2 class="h3 fw-semibold mb-1">Recent Work</h2>
+            <p class="text-secondary mb-0">A few examples—more in the gallery.</p>
+          </div>
+          <a class="btn btn-outline-dark" href="gallery.html">View Gallery</a>
+        </div>
+
+        <div class="row g-3">
+          <div class="col-6 col-lg-3">
+          </div>
+          <div class="col-6 col-lg-3">
+          </div>
+          <div class="col-6 col-lg-3">
+          </div>
+          <div class="col-6 col-lg-3">
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- FOOTER -->
-  <footer class="py-4 border-top">
-    <div class="container d-flex flex-column flex-sm-row justify-content-between gap-2">
-      <div class="text-secondary small">© <span id="y"></span> Cornerstone Bindery</div>
-      <div class="small">
-        <a class="text-decoration-none" href="contact.html">Contact</a>
-        <span class="text-secondary mx-2">•</span>
-        <a class="text-decoration-none" href="about.html">About</a>
+    <!-- FOOTER -->
+    <footer class="py-4 border-top">
+      <div class="container d-flex flex-column flex-sm-row justify-content-between gap-2">
+        <div class="text-secondary small">© <span id="y"></span> Cornerstone Bindery</div>
+        <div class="small">
+          <a class="text-decoration-none" href="contact.html">Contact</a>
+          <span class="text-secondary mx-2">•</span>
+          <a class="text-decoration-none" href="about.html">About</a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </main>
 
-  <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
-
-  <!-- Bootstrap JS bundle (required for offcanvas) -->
+  <!-- JS -->
+   <script src="functions/site.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
