--- a/Site/contact.html
+++ b/Site/contact.html
@@ -6,6 +6,18 @@
   <title>Contact | Cornerstone Bindery</title>
   <meta name="description" content="Contact Cornerstone Bindery to request a quote or ask a question." />
 
+
+<!-- Favicon -->
+<link rel="icon" href="assets/favicon.ico" sizes="any">
+<!-- PNG fallback -->
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+<!-- Apple -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+
+
+
+
   <!-- Cinzel -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
 
