--- a/Site/rebinding.html
+++ b/Site/rebinding.html
@@ -7,6 +7,17 @@
   <title>Rebinding Options | Cornerstone Bindery</title>
   <meta name="description" content="Rebinding options, base pricing, add-ons, and process for Cornerstone Bindery." />
 
+
+<!-- Favicon -->
+<link rel="icon" href="assets/favicon.ico" sizes="any">
+<!-- PNG fallback -->
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+<!-- Apple -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+
+
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
