--- a/Site/rebinding.html
+++ b/Site/rebinding.html
@@ -7,16 +7,11 @@
   <title>Rebinding Options | Cornerstone Bindery</title>
   <meta name="description" content="Rebinding options, base pricing, add-ons, and process for Cornerstone Bindery." />
 
-
-<!-- Favicon -->
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<!-- PNG fallback -->
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
-<!-- Apple -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-
-
+  <!-- Favicon -->
+  <link rel="icon" href="assets/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,13 +44,8 @@
 
       <!-- RIGHT -->
       <div class="nav-slot-right">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#siteMenu"
-          aria-controls="siteMenu"
-          aria-label="Open menu">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#siteMenu"
+          aria-controls="siteMenu" aria-label="Open menu">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
@@ -64,10 +54,7 @@
       <div class="offcanvas offcanvas-end" tabindex="-1" id="siteMenu" aria-labelledby="siteMenuLabel">
         <div class="offcanvas-header offcanvas-header-custom">
           <h2 class="offcanvas-title offcanvas-title-lg" id="siteMenuLabel">Menu</h2>
-          <button
-            type="button"
-            class="btn-close offcanvas-close"
-            data-bs-dismiss="offcanvas"
+          <button type="button" class="btn-close offcanvas-close" data-bs-dismiss="offcanvas"
             aria-label="Close"></button>
         </div>
 
@@ -110,11 +97,11 @@
       <!-- BASE PRICING -->
       <section class="mb-5" aria-labelledby="basePricing">
         <div class="p-4 p-md-5 bg-white border rounded-4">
-          <h2 class="h4 fw-semibold mb-4" id="basePricing">Base Pricing</h2>
+          <h2 class="cb-heading h4 fw-semibold mb-4" id="basePricing">Base Pricing</h2>
 
           <div class="row g-4">
             <div class="col-md-6 col-lg-3">
-              <div class="p-4 border rounded-4 h-100 text-center">
+              <div class="pricing-card p-4 border rounded-4 h-100 text-center">
                 <h3 class="h5 fw-semibold">Small</h3>
                 <p class="text-secondary small mb-2">Compact / near 6"</p>
                 <div class="fw-semibold fs-5">$115–$130</div>
@@ -122,7 +109,7 @@
             </div>
 
             <div class="col-md-6 col-lg-3">
-              <div class="p-4 border rounded-4 h-100 text-center">
+              <div class="pricing-card p-4 border rounded-4 h-100 text-center">
                 <h3 class="h5 fw-semibold">Medium</h3>
                 <p class="text-secondary small mb-2">Standard / near 7"</p>
                 <div class="fw-semibold fs-5">$150–$165</div>
@@ -130,7 +117,7 @@
             </div>
 
             <div class="col-md-6 col-lg-3">
-              <div class="p-4 border rounded-4 h-100 text-center">
+              <div class="pricing-card p-4 border rounded-4 h-100 text-center">
                 <h3 class="h5 fw-semibold">Large</h3>
                 <p class="text-secondary small mb-2">Near 8–9"</p>
                 <div class="fw-semibold fs-5">$215–$230</div>
@@ -138,7 +125,7 @@
             </div>
 
             <div class="col-md-6 col-lg-3">
-              <div class="p-4 border rounded-4 h-100 text-center">
+              <div class="pricing-card p-4 border rounded-4 h-100 text-center">
                 <h3 class="h5 fw-semibold">Extra Large</h3>
                 <p class="text-secondary small mb-2">Oversized</p>
                 <div class="fw-semibold fs-5">$250+</div>
@@ -151,7 +138,7 @@
       <!-- WHAT'S INCLUDED -->
       <section class="mb-5" aria-labelledby="included">
         <div class="p-4 p-md-5 bg-white border rounded-4">
-          <h2 class="h4 fw-semibold mb-3" id="included">What’s Included in a Standard Rebind</h2>
+          <h2 class="cb-heading h4 fw-semibold mb-3" id="included">What’s Included in a Standard Rebind</h2>
           <ul class="mb-0">
             <li>Edge-lined Bible rebind</li>
             <li>Raised hubs on spine</li>
@@ -165,18 +152,14 @@
       <!-- ADD-ONS -->
       <section class="mb-5" aria-labelledby="addons">
         <div class="p-4 p-md-5 bg-white border rounded-4">
-          <h2 class="h4 fw-semibold mb-4" id="addons">Add-Ons</h2>
+          <h2 class="cb-heading h4 fw-semibold mb-4" id="addons">Add-Ons</h2>
 
           <div class="row g-3">
-            <!-- Add-on Card (repeat this pattern) -->
+            <!-- Perimeter Stitching -->
             <div class="col-md-6 col-lg-4">
               <div class="addon-card border rounded-4 overflow-hidden">
-                <button
-                  class="addon-toggle w-100 text-start p-3 bg-white border-0"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#addonPerimeterStitching"
-                  aria-expanded="false"
+                <button class="addon-toggle w-100 text-start p-3 border-0" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#addonPerimeterStitching" aria-expanded="false"
                   aria-controls="addonPerimeterStitching">
                   <div class="d-flex justify-content-between align-items-center">
                     <span class="fw-semibold">Perimeter Stitching</span>
@@ -186,13 +169,10 @@
                 </button>
 
                 <div class="collapse" id="addonPerimeterStitching">
-                  <div class="p-4 border-top bg-body-tertiary text-center">
+                  <div class="addon-detail p-4 border-top text-center">
                     <div class="addon-detail-wrapper mx-auto">
-                      <img
-                        src="gallery/bibleimage.png"
-                        class="img-fluid rounded-4 border mb-3"
-                        alt="Example of perimeter stitching"
-                        loading="lazy">
+                      <img src="gallery/bibleimage.png" class="img-fluid rounded-4 border mb-3"
+                        alt="Example of perimeter stitching" loading="lazy">
                       <p class="text-secondary mb-0">
                         Perimeter stitching adds a finished edge and extra durability around the cover.
                       </p>
@@ -202,11 +182,11 @@
               </div>
             </div>
 
+            <!-- Liner Gilt Line -->
             <div class="col-md-6 col-lg-4">
               <div class="addon-card border rounded-4 overflow-hidden">
-                <button class="addon-toggle w-100 text-start p-3 bg-white border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#addonLinerGiltLine" aria-expanded="false"
-                  aria-controls="addonLinerGiltLine">
+                <button class="addon-toggle w-100 text-start p-3 border-0" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#addonLinerGiltLine" aria-expanded="false" aria-controls="addonLinerGiltLine">
                   <div class="d-flex justify-content-between align-items-center">
                     <span class="fw-semibold">Liner Gilt Line</span>
                     <span class="fw-semibold">$15</span>
@@ -215,7 +195,7 @@
                 </button>
 
                 <div class="collapse" id="addonLinerGiltLine">
-                  <div class="p-4 border-top bg-body-tertiary text-center">
+                  <div class="addon-detail p-4 border-top text-center">
                     <div class="addon-detail-wrapper mx-auto">
                       <img src="gallery/bibleimage.png" class="img-fluid rounded-4 border mb-3"
                         alt="Example of a liner gilt line" loading="lazy">
@@ -228,11 +208,11 @@
               </div>
             </div>
 
+            <!-- Half Yapp -->
             <div class="col-md-6 col-lg-4">
               <div class="addon-card border rounded-4 overflow-hidden">
-                <button class="addon-toggle w-100 text-start p-3 bg-white border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#addonHalfYapp" aria-expanded="false"
-                  aria-controls="addonHalfYapp">
+                <button class="addon-toggle w-100 text-start p-3 border-0" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#addonHalfYapp" aria-expanded="false" aria-controls="addonHalfYapp">
                   <div class="d-flex justify-content-between align-items-center">
                     <span class="fw-semibold">Half Yapp</span>
                     <span class="fw-semibold">$15</span>
@@ -241,7 +221,7 @@
                 </button>
 
                 <div class="collapse" id="addonHalfYapp">
-                  <div class="p-4 border-top bg-body-tertiary text-center">
+                  <div class="addon-detail p-4 border-top text-center">
                     <div class="addon-detail-wrapper mx-auto">
                       <img src="gallery/bibleimage.png" class="img-fluid rounded-4 border mb-3"
                         alt="Example of a half yapp cover" loading="lazy">
@@ -254,11 +234,11 @@
               </div>
             </div>
 
+            <!-- Full Yapp -->
             <div class="col-md-6 col-lg-4">
               <div class="addon-card border rounded-4 overflow-hidden">
-                <button class="addon-toggle w-100 text-start p-3 bg-white border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#addonFullYapp" aria-expanded="false"
-                  aria-controls="addonFullYapp">
+                <button class="addon-toggle w-100 text-start p-3 border-0" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#addonFullYapp" aria-expanded="false" aria-controls="addonFullYapp">
                   <div class="d-flex justify-content-between align-items-center">
                     <span class="fw-semibold">Full Yapp</span>
                     <span class="fw-semibold">$35–$45</span>
@@ -267,7 +247,7 @@
                 </button>
 
                 <div class="collapse" id="addonFullYapp">
-                  <div class="p-4 border-top bg-body-tertiary text-center">
+                  <div class="addon-detail p-4 border-top text-center">
                     <div class="addon-detail-wrapper mx-auto">
                       <img src="gallery/bibleimage.png" class="img-fluid rounded-4 border mb-3"
                         alt="Example of a full yapp cover" loading="lazy">
@@ -280,11 +260,11 @@
               </div>
             </div>
 
+            <!-- Art Gilt -->
             <div class="col-md-6 col-lg-4">
               <div class="addon-card border rounded-4 overflow-hidden">
-                <button class="addon-toggle w-100 text-start p-3 bg-white border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#addonArtGilt" aria-expanded="false"
-                  aria-controls="addonArtGilt">
+                <button class="addon-toggle w-100 text-start p-3 border-0" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#addonArtGilt" aria-expanded="false" aria-controls="addonArtGilt">
                   <div class="d-flex justify-content-between align-items-center">
                     <span class="fw-semibold">Art Gilt</span>
                     <span class="fw-semibold">$25</span>
@@ -293,7 +273,7 @@
                 </button>
 
                 <div class="collapse" id="addonArtGilt">
-                  <div class="p-4 border-top bg-body-tertiary text-center">
+                  <div class="addon-detail p-4 border-top text-center">
                     <div class="addon-detail-wrapper mx-auto">
                       <img src="gallery/bibleimage.png" class="img-fluid rounded-4 border mb-3"
                         alt="Example of art gilt edges" loading="lazy">
@@ -306,11 +286,11 @@
               </div>
             </div>
 
+            <!-- Expedited -->
             <div class="col-md-6 col-lg-4">
               <div class="addon-card border rounded-4 overflow-hidden">
-                <button class="addon-toggle w-100 text-start p-3 bg-white border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#addonExpedited" aria-expanded="false"
-                  aria-controls="addonExpedited">
+                <button class="addon-toggle w-100 text-start p-3 border-0" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#addonExpedited" aria-expanded="false" aria-controls="addonExpedited">
                   <div class="d-flex justify-content-between align-items-center">
                     <span class="fw-semibold">Expedited Option</span>
                     <span class="fw-semibold">$100</span>
@@ -319,7 +299,7 @@
                 </button>
 
                 <div class="collapse" id="addonExpedited">
-                  <div class="p-4 border-top bg-body-tertiary text-center">
+                  <div class="addon-detail p-4 border-top text-center">
                     <div class="addon-detail-wrapper mx-auto">
                       <img src="gallery/bibleimage.png" class="img-fluid rounded-4 border mb-3"
                         alt="Example of expedited service" loading="lazy">
@@ -339,12 +319,13 @@
       <!-- PROCESS -->
       <section aria-labelledby="process">
         <div class="p-4 p-md-5 bg-body-tertiary border rounded-4">
-          <h2 class="h4 fw-semibold mb-3" id="process">Payment &amp; Process</h2>
+          <h2 class="cb-heading h4 fw-semibold mb-3" id="process">Payment &amp; Process</h2>
           <p class="text-secondary">
-            I accept Credit Card, PayPal, Venmo, Cash App, and Apple Pay.
+            I accept Credit Card, Bank ACH, Paypal, and Apple Pay.
           </p>
           <p class="text-secondary mb-0">
-            Payment is normally collected during or upon completion of the rebind. No payment is required upon waitlist entry.
+            Payment is normally collected during or upon completion of the rebind. No payment is required upon waitlist
+            entry.
           </p>
         </div>
       </section>
