--- a/Site/index.html
+++ b/Site/index.html
@@ -6,14 +6,13 @@
   <title>Cornerstone Bindery</title>
   <meta name="description" content="Handcrafted Bible rebinding and restoration." />
 
-<!-- Favicon -->
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<!-- PNG fallback -->
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
-<!-- Apple -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-
+  <!-- Favicon -->
+  <link rel="icon" href="assets/favicon.ico" sizes="any">
+  <!-- PNG fallback -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+  <!-- Apple -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,15 +27,13 @@
 </head>
 
 <body>
-  <!-- NAVBAR + Offcanvas -->
+  <!-- NAVBAR + Offcanvas (unchanged) -->
   <nav class="navbar bg-body-tertiary border-bottom">
     <div class="container">
-      <!-- LEFT -->
       <a class="navbar-brand d-flex align-items-center nav-slot-left" href="index.html">
         <img src="gallery/logowhite.png" alt="Cornerstone Bindery logo" class="navbar-logo">
       </a>
 
-      <!-- CENTER -->
       <div class="nav-slot-center">
         <span class="navbar-title">
           <span class="brand-line-1">Cornerstone</span>
@@ -44,28 +41,19 @@
         </span>
       </div>
 
-      <!-- RIGHT -->
       <div class="nav-slot-right">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#siteMenu"
-          aria-controls="siteMenu"
-          aria-label="Open menu">
+        <button class="navbar-toggler" type="button"
+          data-bs-toggle="offcanvas" data-bs-target="#siteMenu"
+          aria-controls="siteMenu" aria-label="Open menu">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
 
-      <!-- Offcanvas menu -->
       <div class="offcanvas offcanvas-end" tabindex="-1" id="siteMenu" aria-labelledby="siteMenuLabel">
         <div class="offcanvas-header offcanvas-header-custom">
           <h2 class="offcanvas-title offcanvas-title-lg" id="siteMenuLabel">Menu</h2>
-          <button
-            type="button"
-            class="btn-close offcanvas-close"
-            data-bs-dismiss="offcanvas"
-            aria-label="Close"></button>
+          <button type="button" class="btn-close offcanvas-close"
+            data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
 
         <div class="offcanvas-body">
@@ -76,21 +64,20 @@
           </ul>
 
           <hr>
-
           <a class="btn btn-dark w-100" href="contact.html">Request a Quote</a>
         </div>
       </div>
     </div>
   </nav>
 
-  <main class="page-frame">
-    <!-- HERO -->
+  <main class="pb-5">
+    <!-- HERO (same pattern as rebinding header) -->
     <header class="py-5">
       <div class="container">
         <div class="row align-items-center g-4">
           <div class="col-lg-6">
-            <h1 class="display-6 fw-semibold">Handcrafted Bible Rebinding &amp; Restoration</h1>
-            <p class="lead text-secondary mt-3">
+            <h1 class="display-6 fw-semibold mb-2">Handcrafted Bible Rebinding &amp; Restoration</h1>
+            <p class="lead text-secondary mb-0">
               Premium materials, careful craftsmanship, and designs built to last for decades.
             </p>
 
@@ -103,88 +90,87 @@
           </div>
 
           <div class="col-lg-6 d-flex justify-content-lg-end justify-content-center">
-            <img
-              class="img-fluid rounded-4 shadow-sm"
-              src="gallery/bibleimage.png"
-              alt="A rebound Bible">
+            <img class="img-fluid rounded-4 shadow-sm"
+              src="gallery/bibleimage.png" alt="A rebound Bible">
           </div>
         </div>
       </div>
     </header>
 
-    <!-- FEATURES -->
-    <section class="py-5 bg-body-tertiary">
-      <div class="container">
-        <div class="row g-4">
-          <div class="col-md-4">
-            <div class="p-4 bg-white rounded-4 h-100 border">
-              <h3 class="h5 fw-semibold">Rebinding</h3>
-              <p class="text-secondary mb-0">
-                Replace failing covers and hinges with durable materials and a clean finish.
-              </p>
+    <!-- ONE centered container holding all panels (like rebinding.html) -->
+    <div class="container">
+      <!-- FEATURES -->
+      <section class="mb-5" aria-labelledby="features">
+        <div class="p-4 p-md-5 bg-white border rounded-4">
+          <h2 class="h4 fw-semibold mb-4" id="features">Services</h2>
+
+          <div class="row g-4">
+            <div class="col-md-4">
+              <div class="p-4 bg-body-tertiary rounded-4 h-100 border">
+                <h3 class="h5 fw-semibold">Rebinding</h3>
+                <p class="text-secondary mb-0">
+                  Replace failing covers and hinges with durable materials and a clean finish.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="p-4 bg-body-tertiary rounded-4 h-100 border">
+                <h3 class="h5 fw-semibold">Restoration</h3>
+                <p class="text-secondary mb-0">
+                  Stabilize older volumes while preserving as much original character as possible.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="p-4 bg-body-tertiary rounded-4 h-100 border">
+                <h3 class="h5 fw-semibold">Custom Options</h3>
+                <p class="text-secondary mb-0">
+                  Leather choices, spine text, hubs, ribbons, edge finishing, and more.
+                </p>
+              </div>
             </div>
           </div>
+        </div>
+      </section>
 
-          <div class="col-md-4">
-            <div class="p-4 bg-white rounded-4 h-100 border">
-              <h3 class="h5 fw-semibold">Restoration</h3>
-              <p class="text-secondary mb-0">
-                Stabilize older volumes while preserving as much original character as possible.
-              </p>
+      <!-- RECENT WORK -->
+      <section aria-labelledby="recentWork">
+        <div class="p-4 p-md-5 bg-white border rounded-4">
+          <div class="d-flex align-items-end justify-content-between gap-3 mb-3">
+            <div>
+              <h2 class="h4 fw-semibold mb-1" id="recentWork">Recent Work</h2>
+              <p class="text-secondary mb-0">A few examples—more in the gallery.</p>
             </div>
+            <a class="btn btn-outline-dark" href="gallery.html">View Gallery</a>
           </div>
 
-          <div class="col-md-4">
-            <div class="p-4 bg-white rounded-4 h-100 border">
-              <h3 class="h5 fw-semibold">Custom Options</h3>
-              <p class="text-secondary mb-0">
-                Leather choices, spine text, hubs, ribbons, edge finishing, and more.
-              </p>
-            </div>
+          <div class="row g-3">
+            <div class="col-6 col-lg-3"></div>
+            <div class="col-6 col-lg-3"></div>
+            <div class="col-6 col-lg-3"></div>
+            <div class="col-6 col-lg-3"></div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- RECENT WORK -->
-    <section class="py-5">
-      <div class="container">
-        <div class="d-flex align-items-end justify-content-between gap-3 mb-3">
-          <div>
-            <h2 class="h3 fw-semibold mb-1">Recent Work</h2>
-            <p class="text-secondary mb-0">A few examples—more in the gallery.</p>
-          </div>
-          <a class="btn btn-outline-dark" href="gallery.html">View Gallery</a>
-        </div>
-
-        <div class="row g-3">
-          <div class="col-6 col-lg-3">
-          </div>
-          <div class="col-6 col-lg-3">
-          </div>
-          <div class="col-6 col-lg-3">
-          </div>
-          <div class="col-6 col-lg-3">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- FOOTER -->
-    <footer class="py-4 border-top">
-      <div class="container d-flex flex-column flex-sm-row justify-content-between gap-2">
-        <div class="text-secondary small">© <span id="y"></span> Cornerstone Bindery</div>
-        <div class="small">
-          <a class="text-decoration-none" href="contact.html">Contact</a>
-          <span class="text-secondary mx-2">•</span>
-          <a class="text-decoration-none" href="about.html">About</a>
-        </div>
-      </div>
-    </footer>
+      </section>
+    </div>
   </main>
 
-  <!-- JS -->
-   <script src="functions/site.js" defer></script>
+  <!-- FOOTER (outside main, like rebinding.html) -->
+  <footer class="py-4 border-top">
+    <div class="container d-flex flex-column flex-sm-row justify-content-between gap-2">
+      <div class="text-secondary small">© <span id="y"></span> Cornerstone Bindery</div>
+      <div class="small">
+        <a class="text-decoration-none" href="contact.html">Contact</a>
+        <span class="text-secondary mx-2">•</span>
+        <a class="text-decoration-none" href="about.html">About</a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="functions/site.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
